fix a paragraph element tag

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<p>In this section, you are able to review all items that you chose to add to your shopping list. The items in this section are 
 			not yet in your shopping list. To place an item into your shopping list, you must click the checkbox to verify that you wish
 			to add the item's information as it is. You can also choose to edit any information about the item that you want to add to 
-			your shopping list, or you can delete the item if you are no longer interested in having the item in your shopping list.</p
+			your shopping list, or you can delete the item if you are no longer interested in having the item in your shopping list.</p>
 			<div id="reviewItems">
 			</div>
 		</section>
